--- a/playbooks/roles/network_info/tasks/main.yaml
+++ b/playbooks/roles/network_info/tasks/main.yaml
@@ -27,4 +27,6 @@
     copy:
       dest: *networkinfo
       content: "{{ network_info | to_nice_json }}"
+      owner: stack
+      group: stack
   when: networkinfo_file.failed
