--- a/playbooks/install_stack.yaml
+++ b/playbooks/install_stack.yaml
@@ -56,6 +56,8 @@
     get_url:
       url: https://images.rdoproject.org/octavia/master/amphora-x64-haproxy-centos.qcow2
       dest: "{{ ansible_env.HOME }}/amphora.qcow2"
+    tags:
+      - downloads
 
   - name: Create containers-prepare-parameters.yaml
     template:
@@ -97,11 +99,15 @@
     command: systemctl reset-failed
     become: true
     become_user: root
+    tags:
+      - deploy
 
   - name: Execute tripleo deploy
     command: systemd-run --unit=tripleo-deploy --uid=stack --gid=wheel -- {{ tripleo_deploy_path }}
     become: true
     become_user: root
+    tags:
+      - deploy
 
   - name: Wait for the deploy to complete
     command: systemctl show -p SubState --value tripleo-deploy
@@ -109,6 +115,8 @@
     until: tripleo_deploy_state is not failed and tripleo_deploy_state.stdout != "running"
     retries: 120 # 2 hours
     delay: 60
+    tags:
+      - deploy
 
   - name: Cleanup and exit on failure
     block:
@@ -120,3 +128,5 @@
     - fail:
         msg: TripleO deploy failed. See {{ tripleo_deploy_logs }} for details.
     when: tripleo_deploy_state.stdout == "failed"
+    tags:
+      - deploy
