--- a/playbooks/vars/defaults.yaml
+++ b/playbooks/vars/defaults.yaml
@@ -59,5 +59,7 @@ enabled_services:
   - /usr/share/openstack-tripleo-heat-templates/environments/services/octavia.yaml
 standalone_role: /usr/share/openstack-tripleo-heat-templates/roles/Standalone.yaml
 
-neutron_bridge_mappings: "external:br-ex,hostonly:br-hostonly"
-neutron_flat_networks: "external,hostonly"
+neutron_bridge_mappings: "external:br-ex,hostonly:br-hostonly,sriov:br-sriov"
+sriov_interface: "enp4s0f1"
+neutron_dev_physical_mappings: "sriov:{{ sriov_interface }}"
+neutron_flat_networks: "external,hostonly,sriov"
