--- a/playbooks/vars/defaults.yaml
+++ b/playbooks/vars/defaults.yaml
@@ -57,8 +57,9 @@ rhcos_meta_url: https://raw.githubusercontent.com/openshift/installer/master/dat
 
 enabled_services:
   - /usr/share/openstack-tripleo-heat-templates/environments/services/octavia.yaml
+  - /usr/share/openstack-tripleo-heat-templates/environments/services/neutron-ovn-sriov.yaml
 #standalone_role: /usr/share/openstack-tripleo-heat-templates/roles/Standalone.yaml
-standalone_role: "{{ ansible_env.HOME }}/StandaloneSriov.yaml"
+standalone_role: "{{ ansible_env.HOME }}/Standalone.yaml"
 
 neutron_bridge_mappings: "external:br-ex,hostonly:br-hostonly,sriov:br-sriov"
 sriov_interface: "enp4s0f1"
