--- a/playbooks/vars/defaults.yaml
+++ b/playbooks/vars/defaults.yaml
@@ -56,8 +56,8 @@ rhcos_meta_url: https://raw.githubusercontent.com/openshift/installer/master/dat
 # Define rhcos_url to override use of rhcos_meta_url
 
 enabled_services:
-  - /usr/share/openstack-tripleo-heat-templates/environments/services/octavia.yaml
   - /usr/share/openstack-tripleo-heat-templates/environments/services/neutron-ovn-sriov.yaml
+#  - /usr/share/openstack-tripleo-heat-templates/environments/services/octavia.yaml
 #standalone_role: /usr/share/openstack-tripleo-heat-templates/roles/Standalone.yaml
 standalone_role: "{{ ansible_env.HOME }}/Standalone.yaml"
 
